plugins {
    id 'java'
    id 'org.springframework.boot' version '3.4.4' apply false
    id "org.sonarqube" version "6.3.1.5724"
    id 'jacoco'
}

allprojects {
    group = 'io.github.yyytir777'
    version = "0.0.3"

    java {
        toolchain {
            languageVersion.set(JavaLanguageVersion.of(17))
        }
    }
}

subprojects {
    apply plugin: 'java'

    java {
        toolchain {
            languageVersion.set(JavaLanguageVersion.of(17))
        }
    }

    repositories {
        mavenCentral()
    }

    dependencies {
        testImplementation 'org.junit.jupiter:junit-jupiter:5.13.4'
        testRuntimeOnly 'org.junit.platform:junit-platform-launcher:1.10.0'
        testImplementation 'org.assertj:assertj-core:3.27.5'
    }

    tasks.withType(Test).configureEach {
        useJUnitPlatform()
        finalizedBy tasks.named("jacocoTestReport")
    }

    apply plugin: 'jacoco'
    jacoco { toolVersion = "0.8.11" }

    tasks.named("jacocoTestReport").configure {
        reports { xml.required = true; html.required = true }
    }
}

jacoco {
    toolVersion = "0.8.11" // JDK 17/21 쓰면 최신으로
}

jacocoTestReport {
    reports {
        xml.required = true
        html.required = true
    }
}

sonar {
    properties {
        property "sonar.host.url", "https://sonarcloud.io"
        property "sonar.organization", "yyytir777"
        property "sonar.projectKey", "yyytir777_jodag"
    }
}